Move matrix functions to src/
Move matrix functions out of SLL to src/. Add documentation for these classes

See merge request gysela-developpers/gyselalibxx!830

--------------------------------------------

--- a/src/geometryXVx/rhs/CMakeLists.txt
+++ b/src/geometryXVx/rhs/CMakeLists.txt
@@ -19,11 +19,11 @@ target_link_libraries("rhs_${GEOMETRY_VARIANT}"
     PUBLIC
         DDC::core
         DDC::pdi
-        sll::SLL
         gslx::geometry_${GEOMETRY_VARIANT}
         gslx::quadrature
         gslx::speciesinfo
         gslx::initialization_${GEOMETRY_VARIANT}
+        gslx::matrix_tools
         gslx::timestepper
         gslx::utils_${GEOMETRY_VARIANT}
         gslx::utils
