--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,9 +20,10 @@ add_subdirectory(geometryXVx)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryVparMu)
-add_subdirectory(multipatch)
-add_subdirectory(mpi_parallelisation)
 add_subdirectory(math_tools)
+add_subdirectory(matrix_tools)
+add_subdirectory(mpi_parallelisation)
+add_subdirectory(multipatch)
 add_subdirectory(pde_solvers)
 add_subdirectory(quadrature)
 add_subdirectory(timestepper)
