--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(geometryVparMu)
 add_subdirectory(interpolation)
 add_subdirectory(mapping)
 add_subdirectory(math_tools)
+add_subdirectory(matrix_tools)
 add_subdirectory(mpi_parallelisation)
 add_subdirectory(multipatch)
 add_subdirectory(paraconfpp)
