Move polar splines to src/interpolation/polar_splines
Move polar splines from SLL to `src/interpolation/polar_splines`. Only fatal static analysis errors are fixed in this MR.

See merge request gysela-developpers/gyselalibxx!835

--------------------------------------------

--- a/src/interpolation/CMakeLists.txt
+++ b/src/interpolation/CMakeLists.txt
@@ -14,3 +14,5 @@ target_link_libraries("interpolation"
 )
 
 add_library("gslx::interpolation" ALIAS "interpolation")
+
+add_subdirectory(polar_splines)
