--- a/ci_tools/reusable_ci_jobs.yml
+++ b/ci_tools/reusable_ci_jobs.yml
@@ -8,6 +8,8 @@
     - echo "CHANGED_FILES=${changed_files}" >> build.env
     - FOUND_SLL=$(grep "vendor/sll/.*" -x changed_files.txt || true)
     - if [ -z "$FOUND_SLL" ]; then echo "SLL_BUILD_TESTING=OFF" >> build.env; else echo "SLL_BUILD_TESTING=ON" >> build.env; fi
+    - FOUND_POLAR_SPLINES=$(grep "src/interpolation/polar_splines/.*" -x changed_files.txt || true)
+    - if [ -z "$FOUND_POLAR_SPLINES" ]; then echo "POLAR_SPLINES_TEST_DEGREE_MIN=1" >> build.env; echo "POLAR_SPLINES_TEST_DEGREE_MIN=6" >> build.env; fi
     - FOUND_POISSON_2D=$(grep "\(src/geometryRTheta/poisson/.*\)\|\(geometryRTheta/polar_poisson/.*\)" -x changed_files.txt || true)
     - if [ -z "$FOUND_POISSON_2D" ]; then echo "POISSON_2D_BUILD_TESTING=OFF" >> build.env; else echo "POISSON_2D_BUILD_TESTING=ON" >> build.env; fi
     - FOUND_DDC=$(grep "vendor/ddc" changed_files.txt || true)
