--- a/tests/interpolation/CMakeLists.txt
+++ b/tests/interpolation/CMakeLists.txt
@@ -53,9 +53,9 @@ foreach(CONTINUITY RANGE -1 1)
             sll::SLL
           )
           target_compile_definitions("${test_name}" PUBLIC -DDEGREE_R=${DEGREE_R} -DDEGREE_P=${DEGREE_P} -D${BSPLINES_TYPE} -DCONTINUITY=${CONTINUITY} -D${MAPPING_TYPE})
-          gtest_discover_tests(mapping_execution_space_access
+          gtest_discover_tests("${test_name}"
               DISCOVERY_MODE PRE_TEST
-              TEST_SUFFIX "${test_name}")
+              TEST_SUFFIX "_${test_name}")
         endforeach()
       endforeach()
     endforeach()
