Move Gauss-Legendre to src/quadrature
Move Gauss-Legendre to `src/quadrature`. Update the class to use DDC concepts. The class now requires a `Grid` template parameter describing the type of the quadrature grid. The constructor calls `init_discrete_space` for this grid. The coefficients can then be used in the `Quadrature` class like any other quadrature method.

Fixes https://github.com/gyselax/gyselalibxx/issues/33

See merge request gysela-developpers/gyselalibxx!832

--------------------------------------------

--- a/tests/quadrature/CMakeLists.txt
+++ b/tests/quadrature/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(unit_tests_quadrature
     quadrature_2d.cpp
 	neumann_quadrature_spline.cpp
     batched_quadrature.cpp
+    gauss_legendre_integration.cpp
     ../main.cpp
 )
 target_link_libraries(unit_tests_quadrature
@@ -18,6 +19,7 @@ target_link_libraries(unit_tests_quadrature
         gslx::quadrature
         gslx::utils
 )
+target_include_directories(unit_tests_quadrature PRIVATE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/..")
 gtest_discover_tests(unit_tests_quadrature
         DISCOVERY_MODE PRE_TEST)
 target_compile_definitions(unit_tests_quadrature PUBLIC)
