--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,14 +105,12 @@ documentation:
     rm -rf build || true
     # Make docs
     cmake -DGYSELALIBXX_COMPILE_SOURCE=OFF -DGYSELALIBXX_BUILD_DOCUMENTATION=1 -B build-docs .
-    cmake --build build-docs
+    cmake --build build-docs || true
+    cat build-docs/docs/doxygen.log
     # Get files which have changed in this merge request
-    git diff origin/${CI_MERGE_REQUEST_TARGET_BRANCH_NAME}..HEAD --no-indent-heuristic --unified=0 --output=pull_diff.txt --no-color
-    # Filter documentation messages to only complain about modified files
-    python3 ci_tools/check_documentation.py pull_diff.txt build-docs/docs/doxygen.log
     git diff origin/${CI_MERGE_REQUEST_TARGET_BRANCH_NAME}..HEAD --no-indent-heuristic --unified=0 --output=pull_new_files.txt --no-color --diff-filter=A
     python3 ci_tools/check_readme_presence.py pull_new_files.txt
-  allow_failure: true
+    if [ -s build-docs/docs/doxygen.log ]; then exit 1; fi
 
 markdown_best_practices:
   rules:
