Move mappings from SLL to src
In order to have a clear diff, this MR only fixes fatal static analysis errors. Other errors will be fixed in the next MR.

To merge after !838

See merge request gysela-developpers/gyselalibxx!839

--------------------------------------------

--- a/src/geometryRTheta/advection_field/CMakeLists.txt
+++ b/src/geometryRTheta/advection_field/CMakeLists.txt
@@ -9,9 +9,10 @@ target_link_libraries("advection_field_RTheta" INTERFACE
     DDC::core
     sll::SLL
     gslx::data_types
+    gslx::mapping
+    gslx::pde_solvers
+    gslx::poisson_RTheta
     gslx::speciesinfo
     gslx::utils
-    gslx::poisson_RTheta
-    gslx::pde_solvers
 )
 add_library("gslx::advection_field_RTheta" ALIAS "advection_field_RTheta")
