--- a/src/multipatch/connectivity/CMakeLists.txt
+++ b/src/multipatch/connectivity/CMakeLists.txt
@@ -8,6 +8,7 @@ target_include_directories("multipatch_connectivity"
 target_link_libraries("multipatch_connectivity" INTERFACE
     DDC::core
     gslx::data_types
+    gslx::mapping
     gslx::multipatch_data_types
     gslx::utils
 )
