--- a/src/pde_solvers/CMakeLists.txt
+++ b/src/pde_solvers/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries("pde_solvers"
         DDC::fft
         sll::SLL
         gslx::data_types
+        gslx::mapping
         gslx::matrix_tools
         gslx::utils
 )
