--- a/src/quadrature/CMakeLists.txt
+++ b/src/quadrature/CMakeLists.txt
@@ -10,6 +10,7 @@ target_include_directories(quadrature
 target_link_libraries(quadrature PUBLIC
     DDC::core
     sll::SLL
+    gslx::mapping
     gslx::utils
 )
 
