--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,10 +21,11 @@ add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryVparMu)
 add_subdirectory(interpolation)
-add_subdirectory(multipatch)
-add_subdirectory(mpi_parallelisation)
+add_subdirectory(mapping)
 add_subdirectory(math_tools)
 add_subdirectory(matrix_tools)
+add_subdirectory(mpi_parallelisation)
+add_subdirectory(multipatch)
 add_subdirectory(pde_solvers)
 add_subdirectory(quadrature)
 add_subdirectory(timestepper)
