Updates koliop to 0.0.20
Includes:

- some documentation improvements;
- toolchain typos;
- default to release unless set my user/parent project;
- the_ removal;
- tor1, tor2, tor3 support for the distribution function (some inputs are still in (theta, r) layout right !);
- a rewrite of the collision operator is setup, notably, the configuration is now explicit and dependent on the geometry. The user needs to provide the operator with geometry specific quantities.

See merge request gysela-developpers/gyselalibxx!809

--------------------------------------------

Co-authored-by: Etienne Malaboeuf <eti.malaboeuf@gmail.com>

--- a/simulations/geometryVparMu/collisions/CMakeLists.txt
+++ b/simulations/geometryVparMu/collisions/CMakeLists.txt
@@ -8,6 +8,7 @@ target_link_libraries(test_collSpVparMu
   PDI::pdi
   gslx::collisions
   gslx::geometry_vparmu
+  gslx::geometry_collisions_vparmu
   gslx::initialization_vparmu
   gslx::io
   gslx::quadrature
