--- a/simulations/geometryVparMu/collisions/coll_1specie_maxwellian.yaml
+++ b/simulations/geometryVparMu/collisions/coll_1specie_maxwellian.yaml
@@ -13,9 +13,9 @@ SpeciesInfo:
   temperature_eq: 1.
   mean_velocity_eq: 0.
 
-CollisionsInfo:
+Collisions:
   nustar0_rpeak: 1.
-  collisions_interspecies: false
+  interspecies: false
 
 Algorithm:
   deltat: 0.01  # Attention: must be < 1.e-2 because plays the role of nustar here
