Remove SLL folder
Remove the SLL folder from the repository. Naming conventions (especially regarding Span1D etc) are not updated as these classes will probably be changed in my next MR when covariant/contravariant concepts are introduced.

See merge request gysela-developpers/gyselalibxx!841

--------------------------------------------

--- a/src/matrix_tools/CMakeLists.txt
+++ b/src/matrix_tools/CMakeLists.txt
@@ -16,8 +16,8 @@ target_link_libraries(matrix_tools
     PUBLIC
         DDC::core
         DDC::splines
-        sll::SLL
         Kokkos::kokkos
+        gslx::utils
 )
 if(CMAKE_VERSION GREATER_EQUAL 3.18)
     target_link_libraries(matrix_tools PRIVATE LAPACK::LAPACK)
