Use DDC::core instead of DDC::DDC
This target will be removed soon, it is the only place where it is used.

See merge request gysela-developpers/gyselalibxx!854

--------------------------------------------

--- a/src/math_tools/CMakeLists.txt
+++ b/src/math_tools/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories("math_tools"
 
 target_link_libraries("math_tools"
     INTERFACE
-        DDC::DDC
+        DDC::core
         gslx::data_types
 )
 
