--- a/src/data_types/CMakeLists.txt
+++ b/src/data_types/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories("data_types"
 target_link_libraries("data_types"
     INTERFACE
         DDC::core
+        DDC::splines
         gslx::math_tools
         gslx::utils
 )
