Fix some circular CMake dependencies
Fix some circular CMake dependencies by removing unnecessary includes and moving 3 methods. Add missing `#include`s and linking that arises as a consequence of the removed includes.

There is still a circular dependency between libraries:
- `mapping/discrete_to_cartesian.hpp`->`math_tools/math_tools.hpp`
- `math_tools/l_norm_tools.hpp`->`quadrature/quadrature.hpp`->`mapping/mapping_tools.hpp`

See merge request gysela-developpers/gyselalibxx!855

--------------------------------------------

--- a/src/interpolation/CMakeLists.txt
+++ b/src/interpolation/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories("interpolation"
 target_link_libraries("interpolation"
     INTERFACE
         DDC::core
+        gslx::math_tools
         gslx::utils
 )
 
