--- a/tests/mapping/CMakeLists.txt
+++ b/tests/mapping/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_libraries(metric_tensor_tests_sll
         GTest::gtest
         GTest::gmock
         gslx::mapping
+        gslx::utils
 )
 gtest_discover_tests(metric_tensor_tests_sll DISCOVERY_MODE PRE_TEST)
 
@@ -23,6 +24,8 @@ target_link_libraries(jacobian_mapping_tests_sll
         GTest::gtest
         GTest::gmock
         gslx::mapping
+        gslx::math_tools
+        gslx::utils
 )
 gtest_discover_tests(jacobian_mapping_tests_sll DISCOVERY_MODE PRE_TEST)
 
@@ -36,6 +39,7 @@ target_link_libraries(jacobian_mapping_matrix_coef_tests_sll
         GTest::gtest
         GTest::gmock
         gslx::mapping
+        gslx::utils
 )
 gtest_discover_tests(jacobian_mapping_matrix_coef_tests_sll DISCOVERY_MODE PRE_TEST)
 
@@ -49,6 +53,7 @@ target_link_libraries(pseudo_cartesian_tests_sll
         GTest::gtest
         GTest::gmock
         gslx::mapping
+        gslx::utils
 )
 gtest_discover_tests(pseudo_cartesian_tests_sll DISCOVERY_MODE PRE_TEST)
 
@@ -62,6 +67,7 @@ target_link_libraries(refined_discrete_mapping_test
         GTest::gtest
         GTest::gmock
         gslx::mapping
+        gslx::utils
 )
 gtest_discover_tests(refined_discrete_mapping_test DISCOVERY_MODE PRE_TEST)
 
@@ -75,6 +81,7 @@ target_link_libraries(mapping_execution_space_access
         GTest::gtest
         GTest::gmock
         gslx::mapping
+        gslx::utils
 )
 gtest_discover_tests(mapping_execution_space_access DISCOVERY_MODE PRE_TEST)
 
