--- a/tests/matrix_tools/CMakeLists.txt
+++ b/tests/matrix_tools/CMakeLists.txt
@@ -9,7 +9,10 @@ target_link_libraries(matrix_tests
     PUBLIC
         GTest::gtest
         GTest::gmock
+        DDC::core
+        DDC::splines
         gslx::matrix_tools
+        gslx::math_tools
 )
 gtest_discover_tests(matrix_tests DISCOVERY_MODE PRE_TEST)
 
