Fix github actions
**Commit Summary**
- Add permissions for the github token to allow comments to be left on PRs, and flags and draft status to be changed.
- Update the documentation test following e5570076fa3ead68a186abafa3735ff127dd068f to always fail on documentation errors
- Change "isDraft" condition. Private repos cannot put PRs in draft so the presence/lack of the "Ready to review" label is used to determine the draft status
- Don't try to run GPU tests on forks
- Fix missing `git fetch` in script created by `create_private_fork`
- Update `ci_tools/gyselalib_static_analysis.py` to avoid deprecation warnings
- Fix bug in `ci_tools/gyselalib_static_analysis.py` where an uninitialised value (`start`) was used

See merge request gysela-developpers/gyselalibxx!858

--------------------------------------------

--- a/.github/workflows/flag_checks.yml
+++ b/.github/workflows/flag_checks.yml
@@ -9,6 +9,12 @@ jobs:
   Check_flags:
     name: Check flags
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: read
+      pull-requests: write
+      repository-projects: read
+      issues: write
     steps:
       - uses: actions/checkout@v4
         with:
