--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -92,20 +92,23 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Setup documenation compilation
+        run: |
+          cmake -DGYSELALIBXX_COMPILE_SOURCE=OFF -DGYSELALIBXX_BUILD_DOCUMENTATION=ON -B build -S .
+        shell: bash
       - name: Make documenation
         run: |
           # Make docs
-          cmake -DGYSELALIBXX_COMPILE_SOURCE=OFF -DGYSELALIBXX_BUILD_DOCUMENTATION=ON -B build -S .
           cmake --build build --target doc
         shell: bash
+        continue-on-error: true
       - name: Check for new errors
         run: |
+          cat build/docs/doxygen.log
           # Get files which have changed in this merge request
-          git diff ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}..${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }} --no-indent-heuristic --unified=0 --output=pull_diff.txt --no-color
-          # Filter documentation messages to only complain about modified files
-          python3 ci_tools/check_documentation.py pull_diff.txt build/docs/doxygen.log
           git diff ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}..${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }} --no-indent-heuristic --unified=0 --output=pull_new_files.txt --no-color --diff-filter=A
           python3 ci_tools/check_readme_presence.py pull_new_files.txt
+          if [ -s build/docs/doxygen.log ]; then exit 1; fi
         shell: bash
 
   cppcheck_static_analysis_errors:
@@ -160,16 +163,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Indentation, Markdown, Python, Documentation, cppcheck_static_analysis_errors, cmake_static_analysis]
     if: github.event_name == 'pull_request' && failure()
+    permissions:
+      contents: read
+      packages: read
+      pull-requests: write
+      repository-projects: read
+      issues: write
+
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: main
       - name: Set PR to draft to avoid unnecessary runs
         run: |
-          isDraft=$(gh pr view ${{ github.event.pull_request.number }} --json isDraft | jq ."isDraft")
-          if [[ "${isDraft}" != "true" ]]
+          isDraft=${{ github.event.pull_request.draft || (github.repository != 'gyselax/gyselalibxx' && ! contains(github.event.pull_request.labels.*.name, 'Ready to review')) }}
+          if [ "${isDraft}" != "true" ]
           then
-            gh pr ready ${{ github.event.pull_request.number }} --undo
+            if [ "${{github.repository == 'gyselax/gyselalibxx'}}" == "true" ]
+            then
+               gh pr ready ${{ github.event.pull_request.number }} --undo
+            fi
             gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
             gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
           fi
