Split. No recursive required

--- a/.github/workflows/gpu_tests.yml
+++ b/.github/workflows/gpu_tests.yml
@@ -29,17 +29,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  gpu_tests:
-    #runs-on: self-hosted
+  trigger_gpu_tests:
     runs-on: ubuntu-latest
     environment: 'GitLab GPU trigger'
-    #environment: development
     steps:
       - name: Checkout gyselalibxx
         if: ${{ (! inputs.is_duplicate) || true }}
         uses: actions/checkout@v4
-        with:
-          submodules: recursive
       - name: "Filter tests"
         if: ${{ (! inputs.is_duplicate) || true }}
         uses: ./.github/actions/test_filter
@@ -47,22 +43,39 @@ jobs:
           base: ${{ inputs.merge_target }}
           trigger_type: ${{ github.event_name }}
       - name: "Send to persee"
+        if: ${{ (! inputs.is_duplicate) || true }}
         run: |
           git clone "https://ci_bot:${{secrets.GITLAB_PAT}}@gitlab.maisondelasimulation.fr/gysela-developpers/gyselalibxx.git" --single-branch --branch trigger_persee
           echo "${GITHUB_REPOSITORY}" > repo
           echo "${GITHUB_SHA}" > commit
           git commit -m "Test commit ${GITHUB_SHA}" repo commit
           git push
-      #- name: Setup environment
-      #  if: ${{ (! inputs.is_duplicate) || true }}
-      #  run: |
-      #    . toolchains/v100.persee/environment.sh
-      #  shell: bash
-      #- name: Build code
-      #  if: ${{ (! inputs.is_duplicate) || true }}
-      #  uses: ./.github/actions/build_code
-      #  with:
-      #    toolchain: toolchains/v100.persee/toolchain.cmake
-      #- name: Run tests
-      #  if: ${{ (! inputs.is_duplicate) || true }}
-      #  uses: ./.github/actions/run_tests
+
+  #gpu_tests:
+  #  runs-on: self-hosted
+  #  environment: development
+  #  steps:
+  #    - name: Checkout gyselalibxx
+  #      if: ${{ (! inputs.is_duplicate) || true }}
+  #      uses: actions/checkout@v4
+  #      with:
+  #        submodules: recursive
+  #    - name: "Filter tests"
+  #      if: ${{ (! inputs.is_duplicate) || true }}
+  #      uses: ./.github/actions/test_filter
+  #      with:
+  #        base: ${{ inputs.merge_target }}
+  #        trigger_type: ${{ github.event_name }}
+  #    - name: Setup environment
+  #      if: ${{ (! inputs.is_duplicate) || true }}
+  #      run: |
+  #        . toolchains/v100.persee/environment.sh
+  #      shell: bash
+  #    - name: Build code
+  #      if: ${{ (! inputs.is_duplicate) || true }}
+  #      uses: ./.github/actions/build_code
+  #      with:
+  #        toolchain: toolchains/v100.persee/toolchain.cmake
+  #    - name: Run tests
+  #      if: ${{ (! inputs.is_duplicate) || true }}
+  #      uses: ./.github/actions/run_tests
