--- a/.github/workflows/gpu_tests.yml
+++ b/.github/workflows/gpu_tests.yml
@@ -40,7 +40,7 @@ jobs:
         if: ${{ (! inputs.is_duplicate) || true }}
         uses: ./.github/actions/test_filter
         with:
-          base: ${{ inputs.merge_target }}
+          base_sha: ${{ inputs.merge_target }}
           trigger_type: ${{ github.event_name }}
       - name: "Send to persee"
         if: ${{ (! inputs.is_duplicate) || true }}
@@ -67,7 +67,7 @@ jobs:
   #      if: ${{ (! inputs.is_duplicate) || true }}
   #      uses: ./.github/actions/test_filter
   #      with:
-  #        base: ${{ inputs.merge_target }}
+  #        base_sha: ${{ inputs.merge_target }}
   #        trigger_type: ${{ github.event_name }}
   #    - name: Setup environment
   #      if: ${{ (! inputs.is_duplicate) || true }}
