--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,19 +32,19 @@ jobs:
           paths: '["src/**/*.hpp", "src/**/*.cpp", "tests/**/*.hpp", "tests/**/*.cpp", "simulations/**/*.hpp", "simulations/**/*.cpp", "**/CMakeLists.txt", "vendor/**"]'
           cancel_others: 'false'
 
-  #cpu_tests:
-  #  strategy:
-  #    matrix:
-  #      toolchain: [tests_toolchain, tests_release_toolchain, tests_release_omp_toolchain]
-  #    fail-fast: false
-  #  name: CPU Test (${{ matrix.toolchain }})
-  #  needs: pre_job
-  #  uses: ./.github/workflows/cpu_tests.yml
-  #  with:
-  #    toolchain: ${{ matrix.toolchain }}
-  #    merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
-  #    pr_number: ${{ github.event.pull_request.number }}
-  #    is_duplicate: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
+  cpu_tests:
+    strategy:
+      matrix:
+        toolchain: [tests_toolchain, tests_release_toolchain, tests_release_omp_toolchain]
+      fail-fast: false
+    name: CPU Test (${{ matrix.toolchain }})
+    needs: pre_job
+    uses: ./.github/workflows/cpu_tests.yml
+    with:
+      toolchain: ${{ matrix.toolchain }}
+      merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
+      pr_number: ${{ github.event.pull_request.number }}
+      is_duplicate: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
 
   gpu_tests:
     name: GPU Test
@@ -57,88 +57,88 @@ jobs:
       is_duplicate: ${{ needs.pre_job.outputs.should_skip != 'true' && github.event.pull_request.draft == false }}
     secrets: inherit
 
-  #set_draft_failing:
-  #  runs-on: ubuntu-latest
-  #  needs: [cpu_tests, gpu_tests]
-  #  if: github.event_name == 'pull_request' && failure()
-  #  permissions:
-  #    contents: read
-  #    packages: read
-  #    pull-requests: write
-  #    repository-projects: read
-  #    issues: write
-  #  steps:
-  #    - uses: actions/checkout@v4
-  #    - name: Set PR to draft to avoid unnecessary runs
-  #      if: github.repository == 'gyselax/gyselalibxx'
-  #      run: |
-  #        isDraft=${{ github.event.pull_request.draft || (github.repository != 'gyselax/gyselalibxx' && ! contains(github.event.pull_request.labels.*.name, 'Ready to review')) }}
-  #        if [ "${isDraft}" != "true" ]
-  #        then
-  #          if [ "${{github.repository == 'gyselax/gyselalibxx'}}" == "true" ]
-  #          then
-  #            gh pr ready ${{ github.event.pull_request.number }} --undo
-  #          fi
-  #          gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
-  #          gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
-  #        fi
-  #      shell: bash
-  #      env:
-  #        GH_TOKEN: ${{ github.token }}
+  set_draft_failing:
+    runs-on: ubuntu-latest
+    needs: [cpu_tests, gpu_tests]
+    if: github.event_name == 'pull_request' && failure()
+    permissions:
+      contents: read
+      packages: read
+      pull-requests: write
+      repository-projects: read
+      issues: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set PR to draft to avoid unnecessary runs
+        if: github.repository == 'gyselax/gyselalibxx'
+        run: |
+          isDraft=${{ github.event.pull_request.draft || (github.repository != 'gyselax/gyselalibxx' && ! contains(github.event.pull_request.labels.*.name, 'Ready to review')) }}
+          if [ "${isDraft}" != "true" ]
+          then
+            if [ "${{github.repository == 'gyselax/gyselalibxx'}}" == "true" ]
+            then
+              gh pr ready ${{ github.event.pull_request.number }} --undo
+            fi
+            gh pr comment ${{ github.event.pull_request.number }} -b "This PR is failing tests so it has been put back into draft. Please remove the draft status when the tests pass."
+            gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
+          fi
+        shell: bash
+        env:
+          GH_TOKEN: ${{ secrets.BOT_PEM }}
 
-  #set_draft_cancelled:
-  #  runs-on: ubuntu-latest
-  #  needs: [cpu_tests, gpu_tests]
-  #  if: github.event_name == 'pull_request' && cancelled()
-  #  permissions:
-  #    contents: read
-  #    packages: read
-  #    pull-requests: write
-  #    repository-projects: read
-  #    issues: write
-  #  steps:
-  #    - uses: actions/checkout@v4
-  #    - name: Set PR to draft to avoid unnecessary runs
-  #      run: |
-  #        isDraft=${{ github.event.pull_request.draft || (github.repository != 'gyselax/gyselalibxx' && ! contains(github.event.pull_request.labels.*.name, 'Ready to review')) }}
-  #        if [ "${isDraft}" != "true" ]
-  #        then
-  #          if [ "${{github.repository == 'gyselax/gyselalibxx'}}" == "true" ]
-  #          then
-  #             gh pr ready ${{ github.event.pull_request.number }} --undo
-  #          fi
-  #          gh pr comment ${{ github.event.pull_request.number }} -b "It seems like you haven't finished working on this PR so it has been put back into draft. Please remove the draft status when the PR can run tests without being interrupted."
-  #          gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
-  #        fi
-  #      shell: bash
-  #      env:
-  #        GH_TOKEN: ${{ github.token }}
+  set_draft_cancelled:
+    runs-on: ubuntu-latest
+    needs: [cpu_tests, gpu_tests]
+    if: github.event_name == 'pull_request' && cancelled()
+    permissions:
+      contents: read
+      packages: read
+      pull-requests: write
+      repository-projects: read
+      issues: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set PR to draft to avoid unnecessary runs
+        run: |
+          isDraft=${{ github.event.pull_request.draft || (github.repository != 'gyselax/gyselalibxx' && ! contains(github.event.pull_request.labels.*.name, 'Ready to review')) }}
+          if [ "${isDraft}" != "true" ]
+          then
+            if [ "${{github.repository == 'gyselax/gyselalibxx'}}" == "true" ]
+            then
+               gh pr ready ${{ github.event.pull_request.number }} --undo
+            fi
+            gh pr comment ${{ github.event.pull_request.number }} -b "It seems like you haven't finished working on this PR so it has been put back into draft. Please remove the draft status when the PR can run tests without being interrupted."
+            gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
+          fi
+        shell: bash
+        env:
+          GH_TOKEN: ${{ secrets.BOT_PEM }}
 
-  #set_labels:
-  #  runs-on: ubuntu-latest
-  #  needs: [cpu_tests, gpu_tests]
-  #  name: Set PR labels
-  #  if: github.event_name == 'pull_request' && success() && github.repository == 'gyselax/gyselalibxx'
-  #  permissions:
-  #    contents: read
-  #    packages: read
-  #    pull-requests: write
-  #    repository-projects: read
-  #    issues: write
+  set_labels:
+    runs-on: ubuntu-latest
+    needs: [cpu_tests, gpu_tests]
+    name: Set PR labels
+    if: github.event_name == 'pull_request' && success() && github.repository == 'gyselax/gyselalibxx'
+    permissions:
+      contents: read
+      packages: read
+      pull-requests: write
+      repository-projects: read
+      issues: write
 
-  #  steps:
-  #    - uses: actions/checkout@v4
-  #    - name: Set PR labels for reviews
-  #      run: |
-  #        if [ "${{ github.event.pull_request.draft }}" != "true" ]
-  #        then
-  #          STATES=$(gh pr checks ${{ github.event.pull_request.number }} --required --json state)
-  #          N_PASSES=$(echo $STATES | grep -o "\"state\":\"SUCCESS\"" | wc -l)
-  #          if [[ ${N_PASSES} == 10 ]]
-  #          then
-  #            # If all required tests are passing then mark as ready to review
-  #            gh pr edit ${{ github.event.pull_request.number }} --add-label "Ready to review"
-  #          fi
-  #        fi
-  #      env:
-  #        GH_TOKEN: ${{ github.token }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set PR labels for reviews
+        run: |
+          if [ "${{ github.event.pull_request.draft }}" != "true" ]
+          then
+            STATES=$(gh pr checks ${{ github.event.pull_request.number }} --required --json state)
+            N_PASSES=$(echo $STATES | grep -o "\"state\":\"SUCCESS\"" | wc -l)
+            if [[ ${N_PASSES} == 10 ]]
+            then
+              # If all required tests are passing then mark as ready to review
+              gh pr edit ${{ github.event.pull_request.number }} --add-label "Ready to review"
+            fi
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.BOT_PEM }}
