--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -88,7 +88,7 @@ jobs:
           fi
         shell: bash
         env:
-          GH_TOKEN: ${{ outputs.token.TOKEN }}
+          GH_TOKEN: ${{ steps.token.outputs.TOKEN }}
 
   set_draft_cancelled:
     runs-on: ubuntu-latest
@@ -116,7 +116,7 @@ jobs:
           fi
         shell: bash
         env:
-          GH_TOKEN: ${{ outputs.token.TOKEN }}
+          GH_TOKEN: ${{ steps.token.outputs.TOKEN }}
 
   set_labels:
     runs-on: ubuntu-latest
@@ -145,4 +145,4 @@ jobs:
             fi
           fi
         env:
-          GH_TOKEN: ${{ outputs.token.TOKEN }}
+          GH_TOKEN: ${{ steps.token.outputs.TOKEN }}
