--- a/.github/actions/generate_token/action.yml
+++ b/.github/actions/generate_token/action.yml
@@ -20,7 +20,7 @@ runs:
         import time
         # Get PEM file path
         # Get the Client ID
-        client_id = 1132905
+        client_id = "1132905"
         signing_key = jwt.jwk_from_pem(${{ inputs.pem }})
         # Issued at time
         # JWT expiration time (10 minutes maximum)
