--- a/.github/actions/generate_token/action.yml
+++ b/.github/actions/generate_token/action.yml
@@ -21,7 +21,7 @@ runs:
         # Get PEM file path
         # Get the Client ID
         client_id = "1132905"
-        signing_key = jwt.jwk_from_pem("""${{ inputs.pem }}""")
+        signing_key = jwt.jwk_from_pem(bytes(os.environ["PEM"], "utf-8"))
         # Issued at time
         # JWT expiration time (10 minutes maximum)
         # GitHub App's identifier
@@ -31,3 +31,5 @@ runs:
           fh.write(f"TOKEN={jw_token}\n")
         print("::add-mask::$TOKEN")
       shell: python
+      env:
+        PEM: ${{ inputs.pem }}
